Restructure the paper (and other changes)

--- a/doc/paper.bib
+++ b/doc/paper.bib
@@ -27,3 +27,106 @@
   pages        = {198--207},
   year         = {2023}
 }
+@inproceedings{DBLP:conf/uai/BremenK21,
+  author       = {Timothy {van Bremen} and
+                  Ondrej Kuzelka},
+  title        = {Faster lifting for two-variable logic using cell graphs},
+  booktitle    = {{UAI}},
+  series       = {Proceedings of Machine Learning Research},
+  volume       = {161},
+  pages        = {1393--1402},
+  publisher    = {{AUAI} Press},
+  year         = {2021}
+}
+@article{DBLP:journals/jair/Kuzelka21,
+  author       = {Ondrej Kuzelka},
+  title        = {Weighted First-Order Model Counting in the Two-Variable Fragment With
+                  Counting Quantifiers},
+  journal      = {J. Artif. Intell. Res.},
+  volume       = {70},
+  pages        = {1281--1307},
+  year         = {2021}
+}
+@inproceedings{DBLP:conf/ijcai/Kuzelka23,
+  author       = {Ondrej Kuzelka},
+  title        = {Counting and Sampling Models in First-Order Logic},
+  booktitle    = {{IJCAI}},
+  pages        = {7020--7025},
+  publisher    = {ijcai.org},
+  year         = {2023}
+}
+@inproceedings{DBLP:conf/aaai/WangB0K22,
+  author       = {Yuanhong Wang and
+                  Timothy {van Bremen} and
+                  Yuyi Wang and
+                  Ondrej Kuzelka},
+  title        = {Domain-Lifted Sampling for Universal Two-Variable Logic and Extensions},
+  booktitle    = {{AAAI}},
+  pages        = {10070--10079},
+  publisher    = {{AAAI} Press},
+  year         = {2022}
+}
+@inproceedings{DBLP:conf/lics/WangP0K23,
+  author       = {Yuanhong Wang and
+                  Juhua Pu and
+                  Yuyi Wang and
+                  Ondrej Kuzelka},
+  title        = {On Exact Sampling in the Two-Variable Fragment of First-Order Logic},
+  booktitle    = {{LICS}},
+  pages        = {1--13},
+  year         = {2023}
+}
+@inproceedings{DBLP:conf/ijcai/BremenK20,
+  author       = {Timothy {van Bremen} and
+                  Ondrej Kuzelka},
+  title        = {Approximate Weighted First-Order Model Counting: Exploiting Fast Approximate
+                  Model Counters and Symmetry},
+  booktitle    = {{IJCAI}},
+  pages        = {4252--4258},
+  publisher    = {ijcai.org},
+  year         = {2020}
+}
+@article{DBLP:journals/ai/BremenK23,
+  author       = {Timothy {van Bremen} and
+                  Ondrej Kuzelka},
+  title        = {Lifted inference with tree axioms},
+  journal      = {Artif. Intell.},
+  volume       = {324},
+  pages        = {103997},
+  year         = {2023}
+}
+@inproceedings{DBLP:conf/aaai/TothK23,
+  author       = {Jan T{\'{o}}th and
+                  Ondrej Kuzelka},
+  title        = {Lifted Inference with Linear Order Axiom},
+  booktitle    = {{AAAI}},
+  pages        = {12295--12304},
+  publisher    = {{AAAI} Press},
+  year         = {2023}
+}
+@inproceedings{DBLP:conf/ijcai/SvatosJT0K23,
+  author       = {Martin Svatos and
+                  Peter Jung and
+                  Jan T{\'{o}}th and
+                  Yuyi Wang and
+                  Ondrej Kuzelka},
+  title        = {On Discovering Interesting Combinatorial Integer Sequences},
+  booktitle    = {{IJCAI}},
+  pages        = {3338--3346},
+  publisher    = {ijcai.org},
+  year         = {2023}
+}
+@inproceedings{DBLP:conf/ilp/BarvinekB0ZK21,
+  author       = {J{\'{a}}chym Barv{\'{\i}}nek and
+                  Timothy {van Bremen} and
+                  Yuyi Wang and
+                  Filip Zelezn{\'{y}} and
+                  Ondrej Kuzelka},
+  title        = {Automatic Conjecturing of P-Recursions Using Lifted Inference},
+  booktitle    = {{ILP}},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {13191},
+  pages        = {17--25},
+  publisher    = {Springer},
+  year         = {2021}
+}
