--- a/doc/plot.tex
+++ b/doc/plot.tex
@@ -1,4 +1,4 @@
-% Created by tikzDevice version 0.12.6 on 2024-04-01 09:58:28
+% Created by tikzDevice version 0.12.6 on 2024-04-04 08:49:14
 % !TEX encoding = UTF-8 Unicode
 \begin{tikzpicture}[x=1pt,y=1pt]
 \definecolor{fillColor}{RGB}{255,255,255}
@@ -60,43 +60,7 @@
 	(125.09,130.66);
 \definecolor{drawColor}{RGB}{27,158,119}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 34.84, 54.53) --
-	( 37.95, 54.50) --
-	( 41.06, 54.50) --
-	( 44.17, 54.49) --
-	( 47.29, 54.49) --
-	( 50.40, 54.49) --
-	( 53.51, 54.49) --
-	( 56.62, 54.50) --
-	( 59.73, 54.50) --
-	( 62.85, 54.49) --
-	( 65.96, 54.49) --
-	( 69.07, 54.49) --
-	( 72.18, 54.49) --
-	( 75.30, 54.49) --
-	( 78.41, 54.50) --
-	( 81.52, 54.50) --
-	( 84.63, 54.50) --
-	( 87.74, 54.50) --
-	( 90.86, 54.49) --
-	( 93.97, 54.50) --
-	( 97.08, 54.50) --
-	(100.19, 54.49) --
-	(103.31, 54.50) --
-	(106.42, 54.50) --
-	(109.53, 54.50) --
-	(112.64, 54.50) --
-	(115.75, 54.49) --
-	(118.87, 54.50) --
-	(121.98, 54.50) --
-	(125.09, 54.50) --
-	(128.20, 54.50) --
-	(131.32, 54.50) --
-	(134.43, 54.50) --
-	(137.54, 54.50) --
-	(140.65, 54.50);
-
-\path[draw=drawColor,line width= 0.6pt,dash pattern=on 2pt off 2pt ,line join=round] ( 34.84, 52.07) --
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 34.84, 52.07) --
 	( 37.95, 52.04) --
 	( 41.06, 52.04) --
 	( 44.17, 52.04) --
@@ -131,9 +95,45 @@
 	(134.43, 52.04) --
 	(137.54, 52.05) --
 	(140.65, 52.04);
+
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 2pt off 2pt ,line join=round] ( 34.84, 54.53) --
+	( 37.95, 54.50) --
+	( 41.06, 54.50) --
+	( 44.17, 54.49) --
+	( 47.29, 54.49) --
+	( 50.40, 54.49) --
+	( 53.51, 54.49) --
+	( 56.62, 54.50) --
+	( 59.73, 54.50) --
+	( 62.85, 54.49) --
+	( 65.96, 54.49) --
+	( 69.07, 54.49) --
+	( 72.18, 54.49) --
+	( 75.30, 54.49) --
+	( 78.41, 54.50) --
+	( 81.52, 54.50) --
+	( 84.63, 54.50) --
+	( 87.74, 54.50) --
+	( 90.86, 54.49) --
+	( 93.97, 54.50) --
+	( 97.08, 54.50) --
+	(100.19, 54.49) --
+	(103.31, 54.50) --
+	(106.42, 54.50) --
+	(109.53, 54.50) --
+	(112.64, 54.50) --
+	(115.75, 54.49) --
+	(118.87, 54.50) --
+	(121.98, 54.50) --
+	(125.09, 54.50) --
+	(128.20, 54.50) --
+	(131.32, 54.50) --
+	(134.43, 54.50) --
+	(137.54, 54.50) --
+	(140.65, 54.50);
 \definecolor{drawColor}{RGB}{217,95,2}
 
-\path[draw=drawColor,line width= 0.6pt,dash pattern=on 2pt off 2pt ,line join=round] ( 34.84, 49.39) --
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 34.84, 49.39) --
 	( 37.95, 49.33) --
 	( 41.06, 49.33) --
 	( 44.17, 49.33) --
@@ -170,43 +170,7 @@
 	(140.65, 49.33);
 \definecolor{drawColor}{RGB}{117,112,179}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 34.84, 30.63) --
-	( 37.95, 30.63) --
-	( 41.06, 31.33) --
-	( 44.17, 31.33) --
-	( 47.29, 32.63) --
-	( 50.40, 33.82) --
-	( 53.51, 35.96) --
-	( 56.62, 37.83) --
-	( 59.73, 40.62) --
-	( 62.85, 43.28) --
-	( 65.96, 46.30) --
-	( 69.07, 50.22) --
-	( 72.18, 53.16) --
-	( 75.30, 57.14) --
-	( 78.41, 60.47) --
-	( 81.52, 64.05) --
-	( 84.63, 72.20) --
-	( 87.74, 71.34) --
-	( 90.86, 80.12) --
-	( 93.97, 80.67) --
-	( 97.08, 83.21) --
-	(100.19, 89.74) --
-	(103.31, 87.61) --
-	(106.42, 96.04) --
-	(109.53, 98.47) --
-	(112.64, 99.99) --
-	(115.75,103.72) --
-	(118.87,103.27) --
-	(121.98,109.92) --
-	(125.09,111.85) --
-	(128.20,115.67) --
-	(131.32,116.78) --
-	(134.43,119.28) --
-	(137.54,123.20) --
-	(140.65,125.87);
-
-\path[draw=drawColor,line width= 0.6pt,dash pattern=on 2pt off 2pt ,line join=round] ( 34.84, 29.90) --
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 34.84, 29.90) --
 	( 37.95, 30.63) --
 	( 41.06, 30.63) --
 	( 44.17, 29.90) --
@@ -241,9 +205,45 @@
 	(134.43,112.06) --
 	(137.54,116.16) --
 	(140.65,119.03);
+
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 2pt off 2pt ,line join=round] ( 34.84, 30.63) --
+	( 37.95, 30.63) --
+	( 41.06, 31.33) --
+	( 44.17, 31.33) --
+	( 47.29, 32.63) --
+	( 50.40, 33.82) --
+	( 53.51, 35.96) --
+	( 56.62, 37.83) --
+	( 59.73, 40.62) --
+	( 62.85, 43.28) --
+	( 65.96, 46.30) --
+	( 69.07, 50.22) --
+	( 72.18, 53.16) --
+	( 75.30, 57.14) --
+	( 78.41, 60.47) --
+	( 81.52, 64.05) --
+	( 84.63, 72.20) --
+	( 87.74, 71.34) --
+	( 90.86, 80.12) --
+	( 93.97, 80.67) --
+	( 97.08, 83.21) --
+	(100.19, 89.74) --
+	(103.31, 87.61) --
+	(106.42, 96.04) --
+	(109.53, 98.47) --
+	(112.64, 99.99) --
+	(115.75,103.72) --
+	(118.87,103.27) --
+	(121.98,109.92) --
+	(125.09,111.85) --
+	(128.20,115.67) --
+	(131.32,116.78) --
+	(134.43,119.28) --
+	(137.54,123.20) --
+	(140.65,125.87);
 \definecolor{drawColor}{RGB}{231,41,138}
 
-\path[draw=drawColor,line width= 0.6pt,dash pattern=on 2pt off 2pt ,line join=round] ( 34.84, 34.38) --
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 34.84, 34.38) --
 	( 37.95, 34.38) --
 	( 41.06, 34.93) --
 	( 44.17, 35.45) --
@@ -403,7 +403,7 @@
 \path[clip] (  0.00,  0.00) rectangle (240.29,135.16);
 \definecolor{fillColor}{RGB}{255,255,255}
 
-\path[fill=fillColor] (154.94, 96.84) rectangle (212.73,147.20);
+\path[fill=fillColor] (154.94, 96.84) rectangle (224.55,147.20);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (240.29,135.16);
@@ -433,13 +433,13 @@
 \path[clip] (  0.00,  0.00) rectangle (240.29,135.16);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.72] at (178.40,120.54) {bijections};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.72] at (178.40,120.54) {functions};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (240.29,135.16);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.72] at (178.40,106.09) {functions};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.72] at (178.40,106.09) {permutations};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (240.29,135.16);
